CHATS_SIT/force-app/main/default/objects/T_APPLN_REL__c.object
<CustomObject>
    <description>PEAK application relation between applicants</description>
    <fields>
        <fullName>CDE_TYPE_REL_INDIV__c</fullName>
        <description>Relationship</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Relationship</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Relationships</relationshipLabel>
        <relationshipName>Application_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_APPLN_REL__c</fullName>
        <label>IDN_APPLN_REL</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_SEQ_INDIV_RELTD__c</fullName>
        <description>IDN_SEQ_INDIV_RELTD</description>
        <label>IDN_SEQ_INDIV_RELTD</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0}</displayFormat>
        <label>Application Relationships ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>